<resources>
    <string name="app_name">YudaSubmissionMADP</string>
    <string name="custom_app_name">Extinction</string>
    <string name="animals_name">Badak Bercula Satu</string>
    <string name="habitat">Lombok, Indonesia</string>
    <string name="scientific_name">Oryza sativa</string>
    <string name="detail">Lihat Detail</string>
    <string name="my_name">Yuda Hendriawan Budi Handoko</string>
    <string name="my_email">yudahendriawan007@gmail.com</string>
    <string name="tools_deskripi_animal">Harimau sumatra (bahasa Latin: Panthera tigris sumatrae[2]) adalah subspesies harimau yang habitat aslinya di pulau Sumatra, dan merupakan satu dari enam subspesies harimau yang masih bertahan hidup hingga saat ini dan termasuk dalam klasifikasi satwa kritis yang terancam punah (critically endangered) dalam daftar merah spesies terancam yang dirilis Lembaga Konservasi Dunia IUCN. Populasi liar diperkirakan antara 400-500 ekor, terutama hidup di taman-taman nasional di Sumatra. Uji genetik mutakhir telah mengungkapkan tanda-tanda genetik yang unik, yang menandakan bahwa subspesies ini mungkin berkembang menjadi spesies terpisah, bila berhasil lestari.[3]</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="quotes">\"Man jadda wa jadda\"</string>
    <string name="desripsi_harimau_sumatera">Harimau sumatera <i>(Panthera tigris sumatrae)</i> merupakan salah satu dari tiga subspesies harimau yang ada di Indonesia. Dua subspesies lain yaitu harimau bali (Panthera tigris balica) dan harimau jawa (Panthera tigris sondaica) telah dinyatakan punah, meskipun ada beberapa pihak yang masih meyakini bahwa harimau jawa masih ada. Harimau sumatera adalah subspesies terakhir yang masih dapat bertahan dan mewakili subspesies harimau di Indonesia. Oleh karena itu,harimau sumatera bukan hanya merupakan komponen penting dari keanekaragaman hayati Indonesia tetapi juga merupakan salah satu predator puncak (top predator) yang masih tersisa. Bila jenis ini punah maka tidak hanya merupakan suatu kehilangan secara ekologis tetapi juga memalukan dari segi politis bagi pemerintah Indonesia dan masyarakat Indonesia pada umumnya</string>
    <string name="definition_konservasi">Status konservasi spesies adalah indikator kemungkinan untuk spesies yang masih ada dan tersisa hingga saat ini atau masa depan. \nStatus konservasi juga dapat diartikan sebagai status perkembangbiakan atau dari jenis spesies tertentu baik itu tumbuhan maupun hewan yang sudah menjadi tumbuhan atau hewan yang dilindungi. \nBanyak faktor digunakan untuk menentukan status konservasi suatu spesies: tidak hanya spesies yang tersisa, tetapi juga seluruh peningkatan atau penurunan populasi dari waktu ke waktu, tingkat keberhasilan perkembangbiakan, dan ancaman-ancamannya.</string>
    <string name="definition_conservation">Kategori Status konservasi IUCN Red List merupakan kategori yang digunakan oleh IUCN (International Union for the Conservation of Nature and Natural Resources) dalam melakukan klasifikasi terhadap spesies-spesies berbagai makhluk hidup yang terancam kepunahan. Dari status konservasi ini kemudian IUCN mengeluarkan IUCN Red List of Threatened Species atau disingkat IUCN Red List, yaitu daftar status kelangkaan suatu spesies.
\n\nKategori status konservasi dalam IUCN Red List pertama kali dikeluarkan pada tahun 1984. Sampai kini daftar ini merupakan panduan paling berpengaruh mengenai status konservasi keanekaragaman hayati.
\n\nIUCN Red List menetapkan kriteria untuk mengevaluasi status kelangkaan suatu spesies. Kriteria ini relevan untuk semua spesies di seluruh dunia. Tujuannya adalah untuk memperingatkan betapa pentingnya masalah konservasi kepada publik dan pembuat kebijakan untuk menolong komunitas internasional dalam memperbaiki status kelangkaan spesies.
    \n\nKategori konservasi berdasarkan IUCN Redlist versi 3.1 meliputi Extinct (EX; Punah); Extinct in the Wild (EW; Punah Di Alam Liar); Critically Endangered (CR; Kritis), Endangered (EN; Genting atau Terancam), Vulnerable (VU; Rentan), Near Threatened (NT; Hampir Terancam), Least Concern (LC; Berisiko Rendah), Data Deficient (DD; Informasi Kurang), dan Not Evaluated (NE; Belum dievaluasi).</string>
    <string name="vulnerable_definition">Vulnerable (VU; Rentan) adalah status konservasi yang diberikan kepada spesies yang sedang menghadapi risiko kepunahan di alam liar pada waktu yang akan datang. Dalam IUCN Redlist tercatat 4.467 hewan dan 4.607 tumbuhan yang berstatus Rentan. Contoh satwa Indonesia yang berstatus Terancam antara lain; Kasuari, Merak Hijau, dan Kakak Tua Maluku.</string>
    <string name="vulnerable">Rentan (Vulnerable, VN)</string>
    <string name="critical_definition">Critically Endangered (CR; Kritis) adalah status konservasi yang diberikan kepada spesies yang menghadapi risiko kepunahan di waktu dekat. Dalam IUCN Redlist tercatat 1.742 hewan dan 1.577 tumbuhan yang berstatus Kritis. Contoh satwa Indonesia yang berstatus kritis antara lain; Harimau Sumatra, Badak Jawa, Badak Sumatera, Jalak Bali, Orangutan Sumatera, Elang Jawa, Trulek Jawa, Rusa Bawean.</string>
    <string name="crititcal">Kritis (Critical, CR)</string>
    <string name="exit_warning">Apakah anda ingin keluar?</string>
    <string name="endangered_definition">Endangered (EN; Genting atau Terancam) adalah status konservasi yang diberikan kepada spesies yang sedang menghadapi risiko kepunahan di alam liar yang tinggi pada waktu yang akan datang. Dalam IUCN Redlist tercatat 2.573 hewan dan 2.316 tumbuhan yang berstatus Terancam. Contoh satwa Indonesia yang berstatus Terancam antara lain; Banteng, Anoa, Mentok Rimba, Maleo, Tapir, Trenggiling, Bekantan, dan Tarsius.</string>
</resources>
