<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context=".ViewStatusConservation">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/jtv_definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:justificationMode="inter_word"
                android:text="@string/definition_conservation" />

            <ImageView
                android:id="@+id/img_view_vulnerable"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/jtv_definition"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginBottom="10dp"
                tools:background="@color/colorPrimaryLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/jtv_definition"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_toEndOf="@id/img_view_vulnerable"
                android:gravity="center_vertical"
                android:text="@string/vulnerable"
                android:textStyle="bold" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/vulnerable_definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_below="@+id/img_view_vulnerable"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/vulnerable_definition"/>

            <ImageView
                android:id="@+id/img_view_critical"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/vulnerable_definition"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginBottom="10dp"
                tools:background="@color/colorPrimaryLight" />

            <TextView
                android:id="@+id/tv_critical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/vulnerable_definition"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/img_view_vulnerable"
                android:gravity="center_vertical"
                android:text="@string/crititcal"
                android:textStyle="bold" />

            <com.uncopt.android.widget.text.justify.JustifiedTextView
                android:id="@+id/critical_definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_below="@+id/img_view_critical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/critical_definition"/>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>